Updated BaseChecker for easier readability and validation